# la

./: Cargo.toml  README.md  build.rs
examples/: blas.rs  lapacke.rs
src/: error.rs  lib.rs
src/blas/: blas_lib.rs  functions.rs  mod.rs  util.rs
src/lapacke/: functions.rs  lapacke_lib.rs  mod.rs
src/types/: mod.rs
